--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -61,7 +61,7 @@
   <string name="button_generate">Izradi ključ</string>
   <string name="button_resize">Promijeni veličinu</string>
   <string name="alert_disconnect_msg">Veza prekinuta</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Emulacija Terminala</string>
   <string name="pref_emulation_title">Način emulacije</string>
   <string name="pref_scrollback_title">Veličina ScrollBack-a</string>
