--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Ajustando sensibilidade</string>
   <string name="pubkey_touch_prompt">Toque na caixa para testar sensibilidade: %1$d%% pronto</string>
   <string name="pubkey_touch_hint">Para garantir aleatoriedade durante a geração da chave, mova seu dedo aleatoriamente na caixa abaixo.</string>
-  <string name="pubkey_generating">Gerando par de chaves...</string>
+  <string name="pubkey_generating">""Gerando par de chaves&#8230;"</string>
   <string name="pubkey_copy_private">Copiar chave privada</string>
   <string name="pubkey_copy_public">Copiar chave pública</string>
   <string name="pubkey_list_empty">Pressione Menu para criar ou importar pares de chaves.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Gerar chave</string>
   <string name="button_resize">Redimensionar</string>
   <string name="alert_disconnect_msg">Conexão perdida</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Emulação de Terminal</string>
   <string name="pref_emulation_title">Modo de emulação</string>
   <string name="pref_emulation_summary">Modo de emulação do terminal com conexões PTY</string>
