--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Entropi Toplanıyor</string>
   <string name="pubkey_touch_prompt">Rastgele girdi toplamak için bu kutuya dokun: %1$d%% oluşturuldu</string>
   <string name="pubkey_touch_hint">Anahtar oluşturmada gerekli rastgele girdi kaydedebilmemiz için parmağınızı aşağıdaki kutu üzerinde rastgele haraket ettiriniz.</string>
-  <string name="pubkey_generating">Anahtar çifti oluşturuluyor...</string>
+  <string name="pubkey_generating">"Anahtar çifti oluşturuluyor&#8230;"</string>
   <string name="pubkey_copy_private">Özel-anahtarı kopyala</string>
   <string name="pubkey_copy_public">Umumi-anahtarı kopyala</string>
   <string name="pubkey_list_empty">Anahtar-çiftini oluşturmak için\nveya dişardan eklemek için \"Menü\"ye dokunun.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Anahtar Üret</string>
   <string name="button_resize">Yeniden boyutlandır</string>
   <string name="alert_disconnect_msg">Bağlantı Kesildi</string>
-  <string name="msg_copyright">Telif Hakkı © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Telif Hakkı © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Uçbirim öykünümü</string>
   <string name="pref_emulation_title">Öykünüm kipi</string>
   <string name="pref_emulation_summary">PTY bağlantıları için kullanılan uçbirim öykünüm kipi</string>
