--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -21,7 +21,7 @@
   <string name="pubkey_gather_entropy">Získávání entropie</string>
   <string name="pubkey_touch_prompt">Dotkněte se plochy pro získání náhodnosti: %1$d%% hotovo</string>
   <string name="pubkey_touch_hint">Pro zajištění náhodnosti během generování klíče pohybujte prstem náhodně po ploše níže.</string>
-  <string name="pubkey_generating">Generování párování klíčem...</string>
+  <string name="pubkey_generating">"Generování párování klíčem&#8230;"</string>
   <string name="pubkey_copy_private">Kopírovat soukromý klíč</string>
   <string name="pubkey_copy_public">Kopírovat veřejný klíč</string>
   <string name="pubkey_list_empty">Stiskněte Menu pro získákní\nnebo vytvoření páru klíčů.</string>
