--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Indsamler entropi</string>
   <string name="pubkey_touch_prompt">Berør denne boks for at generere tilfældighed: %1$d%% færdig</string>
   <string name="pubkey_touch_hint">For at garantere tilfældig data til oprettelse af nøglen, skal du flytte din finger tilfældigt indenfor boksen nedenfor.</string>
-  <string name="pubkey_generating">Opretter nøglepar...</string>
+  <string name="pubkey_generating">"Opretter nøglepar&#8230;"</string>
   <string name="pubkey_copy_private">Kopier privat nøgle</string>
   <string name="pubkey_copy_public">Kopier offentlig nøgle</string>
   <string name="pubkey_list_empty">Tryk Menu for at oprette\nog importere nøglepar.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Opret nøgle</string>
   <string name="button_resize">Ændre størrelse</string>
   <string name="alert_disconnect_msg">Forbindelse tabt</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminal emulering</string>
   <string name="pref_emulation_title">Emulerings metode</string>
   <string name="pref_emulation_summary">Terminal emulerings metode til brug ved PTY forbindelser</string>
