--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -26,7 +26,7 @@
   <string name="pubkey_gather_entropy">Sammle Entropie</string>
   <string name="pubkey_touch_prompt">Berühren Sie diese Box, um Zufallszahlen zu erzeugen: %1$d%% fertig</string>
   <string name="pubkey_touch_hint">Um eine gute Zufallsverteilung zu gewährleisten, bewegen Sie Ihren Finger zufällig über die Box unten!</string>
-  <string name="pubkey_generating">Erzeuge Schlüsselpaar...</string>
+  <string name="pubkey_generating">"Erzeuge Schlüsselpaar&#8230;"</string>
   <string name="pubkey_copy_private">Privaten Schlüssel kopieren</string>
   <string name="pubkey_copy_public">Öffentlichen Schlüssel kopieren</string>
   <string name="pubkey_list_empty">\"Menu\" drücken, um Schlüsselpaare\nzu erzeugen oder zu importieren.</string>
@@ -71,7 +71,7 @@
   <string name="button_resize">Größe ändern</string>
   <string name="button_resize_reset">Standardgröße</string>
   <string name="alert_disconnect_msg">Die Verbindung wurde getrennt.</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminalemulation</string>
   <string name="pref_emulation_title">Emulationsmodus</string>
   <string name="pref_emulation_summary">Terminalemulationsmodus für PTY Verbindungen</string>
@@ -278,7 +278,7 @@
   <string name="pref_upload_dest_prompt_summary">Zielpfad für Dateiuploads abfragen</string>  
   <string name="pref_background_file_transfer">Hintergrundübertragung von Dateien</string>
   <string name="pref_background_file_transfer_summary">Das Herunterladen und Hochladen von Dateien im Hintergrund ausführen</string>
-  <string name="transfer_downloading">Herunterladen von Dateien...</string>
+  <string name="transfer_downloading">"Herunterladen von Dateien&#8230;"</string>
   <string name="transfer_downloading_file">Lade herunter: %1$s</string>
   <string name="transfer_download_complete">Herunterladen abgeschlossen</string>
   <string name="transfer_download_failed">Fehler beim Herunterladen: %1$s</string>
@@ -288,7 +288,7 @@
   <string name="transfer_select_remote_upload_dest_desc">Gewünschter Server-Pfad für:</string>  
   <string name="transfer_button_download">Herunterladen</string>
   <string name="transfer_button_upload">Hochladen</string>
-  <string name="transfer_uploading">Hochladen von Dateien...</string>
+  <string name="transfer_uploading">"Hochladen von Dateien&#8230;"</string>
   <string name="transfer_uploading_file">Lade hoch: %1$s</string>
   <string name="transfer_upload_complete">Hochladen abgeschlossen</string>
   <string name="transfer_upload_failed">Fehler beim Hochladen:%1$s</string>
