--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Entropia biltzen</string>
   <string name="pubkey_touch_prompt">Ukitu kaxa hau ausazkotasuna lortzeko: %1$d%% eginda</string>
   <string name="pubkey_touch_hint">Gakoa sortzeko beharrezko den ausazkotasuna lortzeko, mugitu hatza ausaz azpiko kaxaren gainean.</string>
-  <string name="pubkey_generating">Gako parea sortzen...</string>
+  <string name="pubkey_generating">"Gako parea sortzen&#8230;"</string>
   <string name="pubkey_copy_private">Kopiatu gako pribatua</string>
   <string name="pubkey_copy_public">Kopiatu gako publikoa</string>
   <string name="pubkey_list_empty">Sakatu \"Menu\" gako pareak\nsortu edo inportatzeko</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Sortu gakoa</string>
   <string name="button_resize">Aldatu tamaina</string>
   <string name="alert_disconnect_msg">Konexioa galdu da</string>
-  <string name="msg_copyright">Copyright-a © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright&#8211;a © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminal emulatzailea</string>
   <string name="pref_emulation_title">Emulazio modua</string>
   <string name="pref_emulation_summary">PTY konexioetarako terminal emulazio modua</string>
