--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Kerätään satunnaisdataa</string>
   <string name="pubkey_touch_prompt">Kosketa tätä laatikkoa kerätäksesi satunnaisdataa: %1$d%% valmiina</string>
   <string name="pubkey_touch_hint">Liikuta sormeasi alla olevan laatikon kohdalla sattumanvaraisesti varmistaaksesi avaimen luonnin satunnaisuuden.</string>
-  <string name="pubkey_generating">Luodaan avainparia...</string>
+  <string name="pubkey_generating">"Luodaan avainparia&#8230;"</string>
   <string name="pubkey_copy_private">Kopio yksityinen avain</string>
   <string name="pubkey_copy_public">Kopioi julkinen avain</string>
   <string name="pubkey_list_empty">Paina valikkopainiketta\nluodaksesi tai tuodaksesi\navainpareja.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Luo avain</string>
   <string name="button_resize">Muuta kokoa</string>
   <string name="alert_disconnect_msg">Yhteys katkesi</string>
-  <string name="msg_copyright">Tekijänoikeudet © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Tekijänoikeudet © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Pääte-emulaattori</string>
   <string name="pref_emulation_title">Emulointitila</string>
   <string name="pref_emulation_summary">PTY-yhteyksissä käytettävä emulointitila</string>
