--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Génération d\'antropie</string>
   <string name="pubkey_touch_prompt">Touchez cette boîte pour récupérer un nombre aléatoire : %1$d%% fait</string>
   <string name="pubkey_touch_hint">Afin d\'assurer la qualité des nombres aléatoires utilisés pendant la génération de la clé, merci de bouger votre doigt de façon aléatoire sur la boîte ci-dessous.</string>
-  <string name="pubkey_generating">Génération de la paire de clés en cours...</string>
+  <string name="pubkey_generating">"Génération de la paire de clés en cours&#8230;"</string>
   <string name="pubkey_copy_private">Copier la clé privée</string>
   <string name="pubkey_copy_public">Copier la clé publique</string>
   <string name="pubkey_list_empty">Cliquer sur le Menu pour créer\nou importer des paires de clés.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Générer une clé</string>
   <string name="button_resize">Retailler</string>
   <string name="alert_disconnect_msg">Connexion perdue</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Émulation du mode terminal</string>
   <string name="pref_emulation_title">Mode d\'émulation</string>
   <string name="pref_emulation_summary">Mode d\'émulation de terminal à utiliser pour les connexions PTY</string>
