--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -21,7 +21,7 @@
   <string name="pubkey_gather_entropy">Xerando Entropía</string>
   <string name="pubkey_touch_prompt">Toca esta casiña para xerar aleatoriedade: %1$d%% feito</string>
   <string name="pubkey_touch_hint">Para garantir aleatoriedade durante a xeración da chave, mova o dedo aleatoriamente na casiña a continuación</string>
-  <string name="pubkey_generating">Xerando par de chaves...</string>
+  <string name="pubkey_generating">"Xerando par de chaves&#8230;"</string>
   <string name="pubkey_copy_private">Copiar chave privada</string>
   <string name="pubkey_copy_public">Copiar chave pública</string>
   <string name="pubkey_list_empty">Pulse Menu para crear\nou importar pares de chaves</string>
@@ -59,7 +59,7 @@
   <string name="button_generate">Xerar chave</string>
   <string name="button_resize">Redimensionar</string>
   <string name="alert_disconnect_msg">Conexión Perdida</string>
-  <string name="msg_copyright">Todos os dereitos reservados © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Todos os dereitos reservados © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Emulación de terminal</string>
   <string name="pref_emulation_title">Modo de emulación</string>
   <string name="pref_emulation_summary">Modo de emulación de terminal para usar en conexións PTY</string>
