--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Entrópia gyűjtés</string>
   <string name="pubkey_touch_prompt">Érintse meg a dobozt a véletlenszerű generálásához: %1$d%% kész</string>
   <string name="pubkey_touch_hint">A kulcs egyediségének biztosítása érdekében mozgassa ujját véletlenszerűen az alábbi dobozban.</string>
-  <string name="pubkey_generating">Kulcspár generálása...</string>
+  <string name="pubkey_generating">"Kulcspár generálása&#8230;"</string>
   <string name="pubkey_copy_private">Privát kulcs másolása</string>
   <string name="pubkey_copy_public">Nyilvános kulcs másolása</string>
   <string name="pubkey_list_empty">Nyomjon Menu-t, kulcspár\n létrehozáshoz/importáláshoz.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Kulcs generálása</string>
   <string name="button_resize">Átméretezés</string>
   <string name="alert_disconnect_msg">A kapcsolat megszakadt</string>
-  <string name="msg_copyright">Minden jog fentartva © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Minden jog fentartva © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminál emulálás</string>
   <string name="pref_emulation_title">Emulálási mód</string>
   <string name="pref_emulation_summary">Terminál emulálási mód PTY kapcsolatokhoz</string>
