--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -21,7 +21,7 @@
   <string name="pubkey_gather_entropy">Safna bitum af handahófi</string>
   <string name="pubkey_touch_prompt">Snertu kassann til þess að safna bitum af handahófi, %1$d%% búið.</string>
   <string name="pubkey_touch_hint">Til þess að tryggja handahófs kenndan lykil, færðu fingurinn á þér handahófskennt yfir kassann að neðan.</string>
-  <string name="pubkey_generating">Framkalla lykla par...</string>
+  <string name="pubkey_generating">"Framkalla lykla par&#8230;"</string>
   <string name="pubkey_copy_private">Afrita einka lykil</string>
   <string name="pubkey_copy_public">Afrita almennan lykil</string>
   <string name="pubkey_list_empty">Ýttu á \"Menu\" til þess að búa til\neða fluttu inn lykla par.</string>
@@ -65,7 +65,7 @@
   <string name="button_generate">Framkalla lykil</string>
   <string name="button_resize">Breyta stærð</string>
   <string name="alert_disconnect_msg">Tengingu tapað</string>
-  <string name="msg_copyright">Allur réttur áskilinn © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Allur réttur áskilinn © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_ui_category">Notenda viðmót</string>
   <string name="pref_rotation_title">Snúnings hamur</string>
   <string name="pref_rotation_summary">Hvernig breyta skal snúningnum þegar lyklaborðið er sýnilegt/falið</string>
