--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Samler entropi</string>
   <string name="pubkey_touch_prompt">Berør denne boksen for å samle tilfeldige tall: %1$d%% ferdig</string>
   <string name="pubkey_touch_hint">Beveg fingeren over boksen nedenfor for å sikre vilkårlighet ved generering av nøkkel.</string>
-  <string name="pubkey_generating">Genererer nøkkelpar...</string>
+  <string name="pubkey_generating">"Genererer nøkkelpar&#8230;"</string>
   <string name="pubkey_copy_private">Kopier privat nøkkel</string>
   <string name="pubkey_copy_public">Kopier offentlig nøkkel</string>
   <string name="pubkey_list_empty">Trykk \"Meny\" for å opprette\neller importere nøkkelpar.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Generer nøkkel</string>
   <string name="button_resize">Endre størrelse</string>
   <string name="alert_disconnect_msg">Mistet tilkobling</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminalemulering</string>
   <string name="pref_emulation_title">Etterligningsmodus</string>
   <string name="pref_emulation_summary">Etterligningsmodus for terminal for PTY-tilkoblinger</string>
