--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Zbieranie danych losowych</string>
   <string name="pubkey_touch_prompt">Dotknij to pole, żeby losowo wygenerować dane. Ukończono: %1$d%%</string>
   <string name="pubkey_touch_hint">Dla niepowtarzalności klucza, poruszaj losowo palcem po polu poniżej.</string>
-  <string name="pubkey_generating">Generowanie pary kluczy...</string>
+  <string name="pubkey_generating">"Generowanie pary kluczy&#8230;"</string>
   <string name="pubkey_copy_private">Kopiuj klucz prywatny</string>
   <string name="pubkey_copy_public">Kopiuj klucz publiczny</string>
   <string name="pubkey_list_empty">Naciśnij \"Menu\", by utworzyć\nlub zaimportować parę kluczy.</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Generuj klucz</string>
   <string name="button_resize">Zmień rozmiar</string>
   <string name="alert_disconnect_msg">Połączenie utracone</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Emulacja terminalu</string>
   <string name="pref_emulation_title">Tryb emulacji</string>
   <string name="pref_emulation_summary">Emulacja terminalu dla połączeń PTY</string>
