--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -22,7 +22,7 @@
   <string name="pubkey_gather_entropy">Samlar in entropi</string>
   <string name="pubkey_touch_prompt">Rör vid rutan för att samla in slumpdata: %1$d%% klart</string>
   <string name="pubkey_touch_hint">För att försäkra dig om att nyckeln som skapas är slumpmässig, rör fingret slumpmässigt över skärmen.</string>
-  <string name="pubkey_generating">Genererar nyckelpar...</string>
+  <string name="pubkey_generating">"Genererar nyckelpar&#8230;"</string>
   <string name="pubkey_copy_private">Kopiera privat nyckel</string>
   <string name="pubkey_copy_public">Kopiera publik nyckel</string>
   <string name="pubkey_list_empty">Tryck på Meny för att\nskapa eller importera nyckelpar</string>
@@ -66,7 +66,7 @@
   <string name="button_generate">Generera nyckel</string>
   <string name="button_resize">Ändra storlek</string>
   <string name="alert_disconnect_msg">Anslutningen förlorad</string>
-  <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
+  <string name="msg_copyright">Copyright © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminalemulering</string>
   <string name="pref_emulation_title">Emuleringsläge</string>
   <string name="pref_emulation_summary">Emuleringsläge för PTY-anslutningar</string>
