--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -542,10 +542,10 @@
 	<string name="screenshot_error_title">Error creating screenshot</string>
 	<string name="screenshot_not_saved_as">Could not save screenshot as</string>
 
-	<!--  Character picker (SYM) dialog  -->
-	<string name="pref_picker_string">SYM window contents</string>
+	<!--  Character picker (Sym) dialog  -->
+	<string name="pref_picker_string">Sym window contents</string>
 	<string name="pref_picker_string_summary">String of characters for the character picker dialog</string>
-	<string name="pref_picker_keep_open">Leave SYM window open</string>
+	<string name="pref_picker_keep_open">Leave Sym window open</string>
 	<string name="pref_picker_keep_open_summary">Only the cancel button closes the picker dialog</string>
 
 	<!-- File Dialog -->
