--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -329,6 +329,8 @@
 	<string name="console_menu_resize">"Force Size"</string>
 	<!-- Button that brings up the list of URLs on the current screen -->
 	<string name="console_menu_urlscan">"URL Scan"</string>
+	<!-- Button that brings up the list of potential filenames on the current screen -->
+	<string name="console_menu_fnscan">"Filename Scan"</string>
 	<!--  Button that initiates screen capture -->
 	<string name="console_menu_screencapture">"Screen Capture"</string>
 	<!-- Button that lets user pick the file to download -->
